--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,9 @@
   "private": false,
   "homepage": "https://github.com/andrewpavlov/ui.ap",
   "dependencies": {
-    "angular": "^1.5.7",
-    "angular-ui-router": "^0.3.1",
-    "angular-bootstrap": "^1.3.3"
+    "angular": "1.8.2",
+    "angular-ui-router": "1.0.28",
+    "angular-bootstrap": "2.5.0"
   },
   "main": "./build/ui.ap.js"
 }
